--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ finnhub-python==2.4.19
 pandas==2.0.3
 numpy==1.24.3
 matplotlib==3.7.2
+seaborn==0.12.2
+plotly==5.17.0
 ta==0.10.2
 pandas-ta==0.3.14b0
 python-dotenv==1.0.0
@@ -13,3 +15,35 @@ pydantic==2.4.2
 aiohttp==3.8.5
 asyncio-throttle==1.0.2
 tkinter-tooltip==2.1.0
+scikit-learn==1.3.0
+scipy==1.11.3
+statsmodels==0.14.0
+tensorflow==2.13.0
+keras==2.13.1
+xgboost==1.7.6
+lightgbm==4.1.0
+catboost==1.2.2
+alpha-vantage==2.3.1
+quandl==3.7.0
+fredapi==0.5.1
+newsapi-python==0.2.6
+textblob==0.17.1
+vaderSentiment==3.3.2
+transformers==4.35.0
+torch==2.1.0
+torchvision==0.16.0
+torchaudio==2.1.0
+openai==1.3.0
+anthropic==0.7.0
+redis==5.0.1
+celery==5.3.4
+sqlalchemy==2.0.23
+alembic==1.12.1
+psycopg2-binary==2.9.9
+pymongo==4.6.0
+elasticsearch==8.11.0
+kafka-python==2.0.2
+streamlit==1.28.1
+dash==2.14.2
+bokeh==3.3.0
+altair==5.1.2
